@@ -1,5 +1,16 @@
 2012-05-23  Filip Pizlo  <fpizlo@apple.com>
 
+        Unreviewed, fix Windows build.
+
+        * bytecode/CodeBlock.h:
+        * dfg/DFGCapabilities.h:
+        (JSC::DFG::canCompileOpcode):
+        (JSC::DFG::canCompileOpcodes):
+        * dfg/DFGCommon.h:
+        (DFG):
+
+2012-05-23  Filip Pizlo  <fpizlo@apple.com>
+
         DFG should optimize inlined uses of arguments.length and arguments[i]
         https://bugs.webkit.org/show_bug.cgi?id=86327
 
